# hard_ml

./: .gitignore  README.md  pyproject.toml  requirements.txt
hard_ml/: solution_HW1_2.py  solution_HW1_3.py  solution_HW1_3_template.py  solution_HW1_4.py  solution_HW1_5.py  solution_HW1_6.py  solution_template_5.py  solution_template_6.py
notebooks/: HW_01_01.ipynb
