[tool.poetry]
name = "hard-ml"
version = "0.1.0"
description = ""
authors = ["Vladimirov Kirill <kvladimirov.main@gmail.com>"]
readme = "README.md"
packages = [{include = "hard_ml"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
numpy = "^1.23.4"
torch = "^1.13.0"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
scikit-learn = "^1.1.3"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"
jupyterlab = "^3.5.0"
pytest = "^7.2.0"
pylint = "^2.15.5"
mypy = "^0.990"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
